Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-9362

InnoDB tables using DATA_DIRECTORY created using MySQL 5.6 do not work with MariaDB 10.1

    XMLWordPrintable

Details

    • 10.1.14

    Description

      Create a database using MySQL 5.6 server and create InnoDB table with DATA_DIRECTORY:

      CREATE TABLE t1 (c1 INT PRIMARY KEY) DATA DIRECTORY = '/home/jan/mysql/db56/data2';
      insert into t1 values (1),(2),(3);
      

      Shutdown server (cleanly) and start MariaDB 10.1 server to same data directory. Table is not found:

      MariaDB [test]> select * from t1;
      ERROR 1932 (42S02): Table 'test.t1' doesn't exist in engine
      

      Error log contains:

      2016-01-05  9:11:08 140737288095488 [ERROR] InnoDB: Failed to find tablespace for table '"test"."t1"' in the cache. Attempting to load the tablespace with space id 6.
      2016-01-05  9:11:08 140737288095488 [ERROR] InnoDB: In file '/home/jan/mysql/db56/data2/test/t1.ibd', tablespace id and flags are 6 and 1024, but in the InnoDB data dictionary they are 6 and 131072. Have you moved InnoDB .ibd files around without using the commands DISCARD TABLESPACE and IMPORT TABLESPACE? Please refer to http://dev.mysql.com/doc/refman/5.6/en/innodb-troubleshooting-datadict.html for how to resolve the issue.
      2016-01-05 09:11:08 7ffff4104700  InnoDB: Operating system error number 2 in a file operation.  InnoDB: The error means the system cannot find the path specified.
      2016-01-05  9:11:08 140737288095488 [ERROR] InnoDB: Could not find a valid tablespace file for 'test/t1'. See http://dev.mysql.com/doc/refman/5.6/en/innodb-troubleshooting-datadict.html for how to resolve the issue.
      

      Attachments

        Issue Links

          Activity

            People

              jplindst Jan Lindström (Inactive)
              jplindst Jan Lindström (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1.75d
                  1.75d

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.